{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 209,
  "lineage": "bbb577ad-e79e-eff2-e653-8839e41adb1b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.141.25.239",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-09-10T11:00:57.609-07:00",
            "id": "projects/dp-215-devops-team-1-demo-1/regions/europe-west3/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "project": "dp-215-devops-team-1-demo-1",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/regions/europe-west3/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-10T11:00:57.403-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-http-allow",
            "name": "terraform-http-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "priority": 1000,
            "project": "dp-215-devops-team-1-demo-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-http-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.what_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-10T11:00:57.541-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-https-allow",
            "name": "terraform-https-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "priority": 1000,
            "project": "dp-215-devops-team-1-demo-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-https-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.what_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-09-10T11:00:57.556-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-icmp-allow",
            "name": "terraform-icmp-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "priority": 1000,
            "project": "dp-215-devops-team-1-demo-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-icmp-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "icmp-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.what_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-10T11:01:14.524-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dp-215-devops-team-1-demo-1/global/firewalls/internal-allow",
            "name": "internal-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "priority": 1000,
            "project": "dp-215-devops-team-1-demo-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/firewalls/internal-allow",
            "source_ranges": [
              "10.127.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "internal-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.what_network",
            "google_compute_subnetwork.what_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-10T11:00:57.394-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-ssh-allow",
            "name": "terraform-ssh-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "priority": 1000,
            "project": "dp-215-devops-team-1-demo-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/firewalls/terraform-ssh-allow",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-allow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.what_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "loadbalanser",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210720",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/zones/europe-west3-a/disks/loadbalnser"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dp-215-devops-team-1-demo-1/zones/europe-west3-a/instances/loadbalnser",
            "instance_id": "7124050660677788548",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "rGEcdLbsJmU=",
            "metadata_startup_script": "#!/bin/bash\r\n\r\n#Updating OS\r\nsudo apt update \u0026\u0026 sudo apt upgrade -y\r\n\r\nsudo apt install apache2 -y\r\nsudo ufw app list\r\n# sudo ufw status\r\nsudo ufw allow 'Apache'\r\nsudo a2enmod proxy\r\nsudo a2enmod proxy_http\r\nsudo a2enmod proxy_balancer\r\nsudo a2enmod lbmethod_byrequests\r\n\r\nsudo /etc/init.d/apache2 restart\r\n\r\nsudo service apache2 restart\r\n\r\nsudo \u003e /etc/apache2/sites-available/000-default.conf\r\nsudo printf  [...]
            "name": "loadbalnser",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.141.7.225",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
                "network_ip": "10.127.0.100",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/regions/europe-west3/subnetworks/what-subnetwork",
                "subnetwork_project": "dp-215-devops-team-1-demo-1"
              }
            ],
            "project": "dp-215-devops-team-1-demo-1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/zones/europe-west3-a/instances/loadbalnser",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-allow",
              "http-server",
              "https-allow",
              "https-server",
              "icmp-allow",
              "ssh-allow"
            ],
            "tags_fingerprint": "gFwwlSPukbI=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_network.what_network",
            "google_compute_subnetwork.what_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "what_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "name": "what-network",
            "project": "dp-215-devops-team-1-demo-1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "teamcity_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-10T11:00:57.618-07:00",
            "gateway_address": "10.127.1.1",
            "id": "projects/dp-215-devops-team-1-demo-1/regions/europe-west3/subnetworks/teamcity-subnetwork",
            "ip_cidr_range": "10.127.1.0/24",
            "name": "teamcity-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "private_ip_google_access": true,
            "project": "dp-215-devops-team-1-demo-1",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/regions/europe-west3/subnetworks/teamcity-subnetwork"
          },
          "dependencies": [
            "google_compute_network.what_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "what_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-10T11:00:57.619-07:00",
            "gateway_address": "10.127.0.1",
            "id": "projects/dp-215-devops-team-1-demo-1/regions/europe-west3/subnetworks/what-subnetwork",
            "ip_cidr_range": "10.127.0.0/24",
            "name": "what-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/global/networks/what-network",
            "private_ip_google_access": true,
            "project": "dp-215-devops-team-1-demo-1",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dp-215-devops-team-1-demo-1/regions/europe-west3/subnetworks/what-subnetwork"
          },
          "dependencies": [
            "google_compute_network.what_network"
          ]
        }
      ]
    }
  ]
}